--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Learning HTML</title>
+        <title></title>
     </head>
     <body>
-        <p>hello, ninjas</p>
-        <p>my first web page!</p>
-        hi, i'm Lakindu! How are you? LK
+        
     </body>
 </html>
