--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <link rel="stylesheet" href="/styles.css">
+    <title>CSS Basics</title>
+</head>
+<body>
+    <h2>Inline elements</h2>
+
+    <span>span tags</span>
+    <em>em tags</em>
+    <a href="">anchor tags</a>
+    <span>span tags</span>
+
+    <h2>Block-level elements</h2>
+
+    <div>div tag</div>
+    <div>another div tag</div>
+    <h3>h3 tag</h3>
+    <p>paragraph tag</p>
+    <ul>
+        <li>li tag</li>
+        <li>another li tag</li>
+    </ul>
+
+    <hr>
+
+    <!-- the following is a test -->
+     <span>
+        Lorem <p>ipsum dolor, sit amet consectetur adipisicing elit. Quaerat nobis dolor dicta enim</p> ut labore velit soluta repellendus, harum iusto quae libero sequi nostrum, iste ab dolorem. Suscipit, recusandae magnam!
+     </span> <!-- I mean this works-->
+</body>
 </html>
