--- a/index.html
+++ b/index.html
@@ -4,29 +4,39 @@
     <title>CSS Basics</title>
 </head>
 <body>
-    <h2>Inline elements</h2>
+    
+    <div>
 
-    <span>span tags</span>
-    <em>em tags</em>
-    <a href="">anchor tags</a>
-    <span>span tags</span>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad animi a mollitia consectetur, ex officia non explicabo est iusto veniam numquam enim delectus quis magnam, alias dicta aperiam. Porro odio eius, quaerat temporibus sequi aliquam molestiae! Ratione aut possimus quo reprehenderit odit mollitia quis cum nobis adipisci similique atque incidunt alias, doloremque deleniti provident architecto natus autem error iusto magnam. Amet sit repellat modi cupiditate incidunt a, aspernatur quaerat? Laborum natus quae et error hic, accusamus excepturi praesentium impedit mollitia ut quam debitis deleniti sit, laudantium nemo ex eius labore dignissimos omnis voluptatibus veritatis explicabo veniam incidunt nulla! Neque, dolore?</p>
 
-    <h2>Block-level elements</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad animi a mollitia consectetur, ex officia non explicabo
+            est iusto veniam numquam enim delectus quis magnam, alias dicta aperiam. Porro odio eius, quaerat temporibus sequi
+            aliquam molestiae! Ratione aut possimus quo reprehenderit odit mollitia quis cum nobis adipisci similique atque
+            incidunt alias, doloremque deleniti provident architecto natus autem error iusto magnam. Amet sit repellat modi
+            cupiditate incidunt a, aspernatur quaerat? Laborum natus quae et error hic, accusamus excepturi praesentium impedit
+            mollitia ut quam debitis deleniti sit, laudantium nemo ex eius labore dignissimos omnis voluptatibus veritatis
+            explicabo veniam incidunt nulla! Neque, dolore?</p>
 
-    <div>div tag</div>
-    <div>another div tag</div>
-    <h3>h3 tag</h3>
-    <p>paragraph tag</p>
-    <ul>
-        <li>li tag</li>
-        <li>another li tag</li>
-    </ul>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad animi a mollitia consectetur, ex officia non explicabo
+            est iusto veniam numquam enim delectus quis magnam, alias dicta aperiam. Porro odio eius, quaerat temporibus sequi
+            aliquam molestiae! Ratione aut possimus quo reprehenderit odit mollitia quis cum nobis adipisci similique atque
+            incidunt alias, doloremque deleniti provident architecto natus autem error iusto magnam. Amet sit repellat modi
+            cupiditate incidunt a, aspernatur quaerat? Laborum natus quae et error hic, accusamus excepturi praesentium impedit
+            mollitia ut quam debitis deleniti sit, laudantium nemo ex eius labore dignissimos omnis voluptatibus veritatis
+            explicabo veniam incidunt nulla! Neque, dolore?</p>
 
-    <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad animi a mollitia consectetur, ex officia non explicabo
+            est iusto veniam numquam enim delectus quis magnam, alias dicta aperiam. Porro odio eius, quaerat temporibus sequi
+            aliquam molestiae! Ratione aut possimus quo reprehenderit odit mollitia quis cum nobis adipisci similique atque
+            incidunt alias, doloremque deleniti provident architecto natus autem error iusto magnam. Amet sit repellat modi
+            cupiditate incidunt a, aspernatur quaerat? Laborum natus quae et error hic, accusamus excepturi praesentium impedit
+            mollitia ut quam debitis deleniti sit, laudantium nemo ex eius labore dignissimos omnis voluptatibus veritatis
+            explicabo veniam incidunt nulla! Neque, dolore?</p>
 
-    <!-- the following is a test -->
-     <span>
-        Lorem <p>ipsum dolor, sit amet consectetur adipisicing elit. Quaerat nobis dolor dicta enim</p> ut labore velit soluta repellendus, harum iusto quae libero sequi nostrum, iste ab dolorem. Suscipit, recusandae magnam!
-     </span> <!-- I mean this works-->
+    </div>
+
+    <a href="https://www.netninja.co.uk">the best site on the web</a>
+    <a href="https://www.google.com">google website</a>
+
 </body>
 </html>
